More changes related to the modified classes: - Refractored BaseLoggedTest and BrowserUsers to show correctly the user that is performing the actions - Removing deprecated use of URL